# CMPE460-ComputerGraphics

./: .gitignore  README.md
hw1/: CMakeLists.txt  description.txt  main.cpp
hw1/Vector/: Vector3d.h
hw1/executable/: RayTracker
hw1/executable/Linux/: RayTracer
hw1/include/: Utils.h  World.h
hw1/src/: Utils.cpp  World.cpp
hw2/: CMPE 460 Project 2 2024.docx  CMakeLists.txt  input.txt  main.cpp
hw2/Vector/: Vector3d.h
hw2/executable/: RayTracer
hw2/include/: Light.h  Material.h  Ray.h  RayTracer.h  Sphere.h
